<resources>
    <!--应用名-->
    <string name="app_name">小象日记</string>
    <!--标题栏-->
    <string name="default_title">标题</string>
    <string name="left_text">返回</string>
    <string name="right_text">保存</string>
    <!--fragment_空布局-->
    <string name="hello_blank_fragment">todo fragment</string>
    <!--日记条目-->
    <string name="title_diary">标题</string>
    <string name="content_diary">内容</string>
    <string name="date_diary">日期</string>
    <string name="location_diary">位置</string>
    <string name="weather_diary">天气</string>
    <!--日记空布局文案-->
    <string name="empty_text_loading">数据加载中 !</string>
    <string name="empty_text_diary">您还没有任何日记，点击开始创作 !</string>
    <string name="empty_text_wee">您还没有任何点滴，点击开始创作 !</string>
    <string name="content_hint">请输入内容</string>
    <string name="is_public">是否公开</string>
    <string name="is_public_false">否</string>
    <string name="title_hint">请输入标题</string>
    <string name="weather">天气:</string>
    <string name="weather_value">天气获取中</string>
    <string name="location">位置:</string>
    <string name="location_value">位置获取中</string>
    <string name="setting_pass">添加/修改手势密码</string>
    <string name="setting_pass_clean">清除手势密码</string>
    <string name="setting_feedback">反馈</string>
    <string name="setting_about">关于</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <!--手势密码hint-->
    <string name="lock_default">欢迎回来</string>
    <string name="lock_error">密码错误，请重试!</string>
    <!--设置手势密码-->
    <string name="msg_set_lock_first">请添加手势密码</string>
    <string name="msg_set_lock_second">请确认手势密码</string>
    <string name="msg_set_lock_old">请输入原手势密码</string>
    <string name="msg_set_lock_change">和上次手势密码不一致，请重试</string>
    <string name="msg_set_lock_old_error">原手势密码输入错误，请重试</string>
</resources>
